--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^143.0.0",
     "next": "16.0.10",
+    "puppeteer-core": "^24.34.0",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
